# BNPlib

./: .RData  .gitignore  .gitmodules  00.txt  Algorithm.hpp.txt  DistributionWrapper.hpp  Doxyfile  Hierarchy.hpp  HierarchyNNIG.hpp  HierarchyNNIG.imp.hpp  HypersFixed.hpp  HypersFixedNNIG.hpp  Makefile  NNIGHierarchy.cpp  NNIGHierarchy.hpp  NNIGHierarchy.imp.hpp  NNIGHierarchy_imp.hpp  Neal2_NNIG.hpp  Neal2_NNIG.imp.hpp  Neal2_NNIG_imp.hpp  Neal8.hpp  Neal8.imp.hpp  Neal8_NNIG.cpp  Neal8_NNIG.hpp  Neal8_NNIG.imp.hpp  Neal8_NNIG_imp.hpp  README.md  README_ELENA.txt  SimpleMixture.hpp  TODOS.txt  best_clust.csv  clust_best.csv  clust_best0.25.csv  clust_best1.csv  clust_card.csv  clust_cardinalities.csv  clust_final.csv  clust_final0.25.csv  clust_final0.5.csv  clust_final1.csv  (+67 more)
R/: cardinalities.R  clustering.R  data.csv  densities.R  density5.csv  plotting.R  prog.R  prova_BNPmix.R  test1-6.R  test1-8.R  test123.R
R/clustering/: cardinalities.R  clustering.R  rng_test.R
R/densities_with_M/: clust_best035.csv  clust_best05.csv  clust_final035.csv  clust_final05.csv  density05.csv  prog.R
R/density/: clust_best035.csv  clust_best05.csv  clust_best1.csv  clust_best5.csv  clust_final05.csv  clust_final1.csv  clust_final5.csv  data.csv  densities_iters.R  density.rtf  density05.csv  density1.csv  density5.csv  prog.R
R/neal2/: density.csv
R/num_clust_M/: fun.R  num_clusters_final.csv
R/varyingM/: clust_final1.csv  density035.csv  density1.csv  prog.R
bash/: install.sh  install_libs.sh  install_protobuf.sh  install_python.sh  optimization.sh  produce_protos.sh
csv/: clust_0.csv  clust_best.csv  clust_fact.csv  clust_final.csv  clust_multi.csv  clust_test_multi.csv  clust_uni.csv  data_5d.csv  data_5d_1000.csv  data_5d_200.csv  data_5d_500.csv  data_multi.ssv  data_multi_2cl.ssv  data_uni.csv  data_vec.ssv  dens_5d.csv  dens_clust.csv  dens_estimate_iterations.csv  dens_multi.csv  dens_multi2.csv  dens_test_multi.csv  dens_uni.csv  density.csv  density0.25.csv  density0.5.csv  density_0.csv  density_ex.csv  density_fact.csv  densityneal2.csv  grid_5d.csv  grid_multi.csv  grid_multi.ssv  grid_uni.csv  num_clust_best.csv
csv/old/: density_m1.csv  density_m5.csv  densityfinal0.25.csv
csv/test/: data1.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  true_clust2.csv  true_clust3.csv
doc/: .gitignore  Doxyfile
etc/: cluster_sparse_dense_comparison.txt  kcg_notes.txt  rep_notes.txt  time_nnw.txt  time_notes.txt
etc/report/: 00_report.tex  01_intro.tex  02_algorithms.tex  02_algorithms_1.tex  03_estimates_1.tex  04_hierarchies.tex  04_implementation.tex  05_algorithms_2.tex  05_implementation.tex  05_python.tex  06_collectors.tex  06_performance.tex  07_estimates_2.tex  07a_sensit_an.tex  07b_tests_py.tex  08_factory.tex  09_python.tex  10_performance.tex  11_sensit_an.tex  12_tests_py.tex  13_extensions.tex  14_appendix.tex  Collectors.tex  algorithms.tex  applications.tex  factory.tex  implementation.tex  intro.tex  part_1.tex  python.tex  report.tex  results_tests.tex  z.loca.tex
etc/slides/: STRUCTURE.odg  part_1.tex  part_2.tex  slides.tex
install/: install_pybind.sh
lib/beraha_src/: .gitignore  DESCRIPTION  NAMESPACE  README.md  hdp.stan  hdp_simplified.stan  plot_gutierrez_results.R  qsub_non_indep.sub  qsub_synthetic_gutierrez.sub  run_non_indep.R  run_synthetic_experiments_gutierrez.R  submit_many_population.sh  test_univariate_normal_jags.R  test_univariate_normal_stan.R
lib/beraha_src/scripts/: CMakeLists.txt  analyze_two_populations.R  compare_performance.cpp  four_population_experiment.cpp  grades_chile.cpp  many_population_experiment.cpp  two_population_experiments.cpp  two_pouplation_meta_experiment.cpp
lib/beraha_src/src/: CMakeLists.txt  Makevars  RcppExports.cpp  blocked_gibbs.hpp  blocked_gibbs_imp.hpp  cluster.hpp  marginal_semi_hdp.hpp  marginal_semi_hdp_imp.hpp  memory_collector_by_iter.cpp  memory_collector_by_iter.hpp  memory_collector_by_param.cpp  memory_collector_by_param.hpp  metropolis_hastings.hpp  metropolised_marginal_semi_hdp.hpp  metropolised_marginal_semi_hdp_imp.hpp  normal_conjugate_hierarchy.cpp  normal_conjugate_hierarchy.hpp  options.hpp  random_engine.cpp  random_engine.hpp  rcpp_functions.cpp  rcpp_functions.h  semi_hdp_blocked_gibbs.hpp  semi_hdp_blocked_gibbs_imp.hpp  semi_hdp_hierarchy.cpp  semi_hdp_hierarchy.hpp  stirling_numbers.hpp  utils.cpp  utils.hpp
lib/beraha_src/src/statslib/rand/: rstickbreak.hpp
lib/mario_pp_mix-adaptive/: .gitignore  00_pybind_notes.txt  README.md  Test MH Sampling.ipynb
lib/protobuf/: Makefile  Makefile.in  config.h  config.status  libtool  protobuf-lite.pc  protobuf.pc
slides/: .gitignore
slides/1/: commands.tex  part_1.tex  part_2.tex  slides.tex
slides/2/: part_1.tex  part_2.tex
slides/3/: list.txt  part_1.tex  part_2.tex  slides.aux  slides.tex  slides.vrb
slides/report/: part_1.aux  part_1.tex  part_2.aux  part_2.tex  report.aux  report.out  report.tex  report.toc
src/algorithms/: Algorithm.hpp  Algorithm.imp.hpp  Factory.hpp  Factory.imp.hpp  Factory_old.hpp  Neal2.hpp  Neal2.imp.hpp  Neal2_NNIG.hpp  Neal2_NNIG.imp.hpp  Neal8.hpp  Neal8.imp.hpp  factory_utils.hpp
src/api/: BaseCollector.hpp  FileCollector.cpp  FileCollector.hpp  FileCollector.imp.hpp  MemoryCollector.cpp  MemoryCollector.hpp  MemoryCollector.imp.hpp  collectors.hpp  output.pb.cc  output.pb.h  output.proto
src/collectors/: BaseCollector.hpp  FileCollector.cpp  FileCollector.hpp  MemoryCollector.cpp  MemoryCollector.hpp  output.pb.cc
src/hierarchies/: HierarchyBase.hpp  HierarchyDummy.hpp  HierarchyDummy.imp.hpp  HierarchyNNIG.hpp  HierarchyNNIG.imp.hpp  HierarchyNNW.hpp  HierarchyNNW.imp.hpp  HierarchyNNW2.hpp  HierarchyNNW2.imp.hpp  HierarchyNW.hpp  HierarchyNW.imp.hpp
src/hyperparameters/: HypersDummy.hpp  HypersFixedNNIG.hpp  HypersFixedNNW.hpp  HypersFixedNW.hpp
src/mixtures/: BaseMixture.hpp  DirichletMixture.hpp  (+2 more)
student_t/: notes.txt
(+312 files in other folders)
